deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-mc-deployment2
spec:
  selector:
    matchLabels:
      app: products2
      department: sales2
  replicas: 3
  template:
    metadata:
      labels:
        app: products2
        department: sales2
    spec:
      containers:
      - name: hello-again
        image: "gcr.io/google-samples/node-hello:1.0"
