service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-mc-service1
spec:
  type: NodePort
  selector:
    app: products1
    department: sales1
  ports:
  - name: my-first-port1
    protocol: TCP
    port: 60001
    targetPort: 50001
