service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-mc-service2
spec:
  type: NodePort
  selector:
    app: products2
    department: sales2
  ports:
  - name: my-second-port2
    protocol: TCP
    port: 60002
    targetPort: 50002
